--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -73,7 +73,7 @@
                   <div class="avatar avatar--small">
                     <img src="https://randomuser.me/api/portraits/men/37.jpg" />
                   </div>
-                  <span>@{{user.username}}</span>
+                  <span>@{{room.host}}</span>
                 </a>
               </div>
               <!-- <div class="room__details">
@@ -91,11 +91,11 @@
                 <div class="thread">
                   <div class="thread__top">
                     <div class="thread__author">
-                      <a href="{% url 'user-profile' room.host.id%}" class="thread__authorInfo">
+                      <a href="{% url 'user-profile' message.user.id%}" class="thread__authorInfo">
                         <div class="avatar avatar--small">
                           <img src="https://randomuser.me/api/portraits/men/37.jpg" />
                         </div>
-                        <span>@{{message.user}}</span>
+                        <span>@{{message.user.username}}</span>
                       </a>
                       <span class="thread__date">{{message.created|timesince}}</span>
                     </div>
@@ -124,7 +124,9 @@
             </div>
           </div>
           <div class="room__message">
-            <form action="#"><input name="" placeholder="Write your message here..." /></form>
+            <form action="" method="POST">
+              {% csrf_token %}
+            <input name="body" placeholder="Write your message here..." /></form>
           </div>
         </div>
         <!-- Room End -->
