--- a/base/templates/base/activity.html
+++ b/base/templates/base/activity.html
@@ -1,5 +1,6 @@
+{% load static %} 
 {% extends 'main.html' %}
-
+ 
 {% block content %}
     <main class="layout">
       <div class="container">
@@ -25,7 +26,7 @@
             <div class="activities__boxHeader roomListRoom__header">
               <a href="{% url 'user-profile' message.user.id%}" class="roomListRoom__author">
                 <div class="avatar avatar--small">
-                  <img src="https://randomuser.me/api/portraits/women/11.jpg" />
+                  <img src="{% static 'images/profile.png' %}" />
                 </div>
                 <p>
                   @{{message.user}}
