--- a/base/templates/base/profile.html
+++ b/base/templates/base/profile.html
@@ -1,4 +1,5 @@
 {% extends 'main.html' %}
+{% load static %} 
 
 {% block content%}
   <main class="profile-page layout layout--3">
@@ -12,7 +13,7 @@
         <div class="profile">
           <div class="profile__avatar">
             <div class="avatar avatar--large active">
-              <img src="https://randomuser.me/api/portraits/men/11.jpg" />
+              <img src="{% static 'images/profile.png' %}" />
             </div>
           </div>
           <div class="profile__info">
