--- a/base/templates/base/room.html
+++ b/base/templates/base/room.html
@@ -1,4 +1,5 @@
 {% extends 'main.html' %}
+{% load static %} 
 
 {% block content %}
 
@@ -71,7 +72,7 @@
                 <p>Hosted By</p>
                 <a href="{% url 'user-profile' room.host.id %}" class="room__author">
                   <div class="avatar avatar--small">
-                    <img src="https://randomuser.me/api/portraits/men/37.jpg" />
+                    <img src="{% static 'images/profile.png' %}" />
                   </div>
                   <span>@{{room.host}}</span>
                 </a>
@@ -93,7 +94,7 @@
                     <div class="thread__author">
                       <a href="{% url 'user-profile' message.user.id%}" class="thread__authorInfo">
                         <div class="avatar avatar--small">
-                          <img src="https://randomuser.me/api/portraits/men/37.jpg" />
+                          <img src="{% static 'images/profile.png' %}" />
                         </div>
                         <span>@{{message.user.username}}</span>
                       </a>
@@ -139,7 +140,7 @@
             {% for user in participants %}
             <a href="{% url 'user-profile' user.id %}" class="participant">
               <div class="avatar avatar--medium">
-                <img src="https://randomuser.me/api/portraits/men/37.jpg" />
+                <img src="{% static 'images/profile.png' %}" />
               </div>
               <p>
                 {{user.username}}
